--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Local Gemini</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' 'unsafe-inline' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com; style-src 'self' https://cdn.jsdelivr.net https://cdnjs.cloudflare.com;">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.1.2/dist/purify.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/marked-katex-extension@2.1.1/dist/index.umd.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
     <link rel="stylesheet" href="style.css">
@@ -30,8 +33,8 @@
                 </div>
             </div>
             
-            <div id="status-container" style="display: none;"></div>
-            <div id="chat-welcome-container" style="display: none;">
+            <div id="status-container" class="hidden"></div>
+            <div id="chat-welcome-container" class="hidden">
                 <h1 class="welcome-header">Hello, there</h1>
                 <div class="suggestion-cards">
                     <div class="suggestion-card" data-prompt="Explain quantum computing in simple terms">Explain quantum computing</div>
@@ -39,7 +42,7 @@
                     <div class="suggestion-card" data-prompt="What's the difference between a lama and an alpaca?">Lama vs alpaca</div>
                 </div>
             </div>
-            <div id="chat-conversation-area" style="display: none;">
+            <div id="chat-conversation-area" class="hidden">
                 <div id="chat-container-wrapper">
                     <div id="chat-container"></div>
                 </div>
@@ -51,7 +54,7 @@
         <div id="models-view" class="view">
             <div id="models-view-content">
                 <h1>Discover Models</h1>
-                <p style="color: var(--secondary-text-color); margin-top: 8px; margin-bottom: 24px;">Download and manage models from the Ollama library.</p>
+                <p class="models-subtitle">Download and manage models from the Ollama library.</p>
                 <input type="text" id="model-search-bar" placeholder="Search models by name, family, or size...">
                 <div id="model-list"></div>
             </div>
